--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <script src="source.js"></script>
 </head>
 <body>
- <div id="activityTitle">Unidad II Vocab Translations</div>
+ <div id="activityTitle">Unidad II Vocabularo Translations</div>
  <div id="cardArea"></div>
  <div id="buttonArea"></div>
  </div>
