--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
  <link href="main.css" rel="stylesheet" type="text/css"/>
  <script src="jquery.min.js"></script>
  <script src="source.js"></script>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-13MMWDVGC5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-13MMWDVGC5');
+</script>
 </head>
 <body>
  <div id="activityTitle">Unidad II Vocabularo Translations</div>
